# fterm

./: .gitignore  README.md  connect.py  dashboard.py  debug_columns.py  list_comp_tables.py  list_ibes_tables.py  pyproject.toml  requirements.txt  test_ibes_schema.py  test_seg_table.py  verify_fed_news.py  verify_revisions.py
backend/: data_provider.py
