[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fterm"
version = "0.1.0"
description = "Financial Terminal integrating WRDS datasets (Compustat, CRSP, IBES, RavenPack, DealScan, RiskMetrics)"
authors = [
  { name="Ruchir Garg", email="rgarg@bhft.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "wrds>=3.1.0",
    "statsmodels>=0.14.0",
    "scipy>=1.10.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pyarrow>=14.0.0"
]

[project.urls]
"Homepage" = "https://github.com/bhft/fterm"
